--- a/playbooks/default.yml
+++ b/playbooks/default.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: foo
+- hosts: dumbhub
   become: yes
   become_method: sudo
   environment:
@@ -13,7 +13,10 @@
     - role: trombik.hosts
     - role: trombik.hostname
     - role: trombik.sudo
+    - role: trombik.apt_repo
+      when: ansible_os_family == 'Debian'
     - role: trombik.tmux
     - role: trombik.vim
     - role: trombik.zsh
+    - role: trombik.ntopng
   vars:
