--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -29,7 +29,7 @@ Metrics/BlockLength:
     - context
     - shared_examples
 
-Metrics/LineLength:
+Layout/LineLength:
   Exclude:
     - "**/*_spec.rb"
     - "**/Vagrantfile"
