--- a/playbooks/default.yml
+++ b/playbooks/default.yml
@@ -18,5 +18,7 @@
     - role: trombik.tmux
     - role: trombik.vim
     - role: trombik.zsh
+    - role: trombik.netplan
+      when: ansible_os_family == 'Debian'
     - role: trombik.ntopng
   vars:
