--- a/playbooks/group_vars/virtualbox.yml
+++ b/playbooks/group_vars/virtualbox.yml
@@ -14,28 +14,44 @@ project_ntopng_listen_address: "{{ os_project_ntopng_listen_address }}"
 
 # XXX disable login in testing environment. should be 1 in prod
 project_ntopng_disable_login: 1
+project_ntopng_interface: br0
 
+# XXX to use a variable as a key in a dict, the entire dict must be defined as
+# a string. here, project_ntopng_interface is used as a key. the string is
+# evaluated as a json, and ansible convert the string to a dict.
+#
+# see https://github.com/ansible/ansible/issues/17324
+project_netplan_br0: |
+  {
+    "network": {
+      "version": "2",
+      "renderer": "networkd",
+      "ethernets": {
+        "eth2": {
+          "dhcp4": "no",
+          "dhcp6": "no"
+        },
+        "eth3": {
+          "dhcp4": "no",
+          "dhcp6": "no"
+          }
+      },
+      "bridges": {
+        "{{ project_ntopng_interface }}": {
+          "interfaces":
+            [ "eth2", "eth3" ],
+          "parameters": {
+            "stp": "no"
+          },
+          "dhcp4": "no",
+          "dhcp6": "no"
+        }
+      }
+    }
+  }
 project_netplan_config:
   - name: 60-bridge.yaml
+    content: "{{ project_netplan_br0 }}"
     state: present
-    content:
-      network:
-        version: 2
-        renderer: networkd
-        ethernets:
-          eth2:
-            dhcp4: "no"
-            dhcp6: "no"
-          eth3:
-            dhcp4: "no"
-            dhcp6: "no"
-        bridges:
-          br0:
-            interfaces:
-              - eth2
-              - eth3
-            parameters:
-              stp: "no"
-            dhcp4: "no"
-            dhcp6: "no"
+
 netplan_clean_config: no
