--- a/inventories/virtualbox/virtualbox.yml
+++ b/inventories/virtualbox/virtualbox.yml
@@ -14,7 +14,7 @@ all:
       vagrant_modifyvm:
         - ["--nicpromisc3", "allow-all"]
         - ["--nicpromisc4", "allow-all"]
-    client.i.trombik.org:
+    router.i.trombik.org:
       vagrant_priority: 10
       ansible_host: 172.16.100.100
       vagrant_extra_networks:
@@ -40,7 +40,7 @@ all:
         dumbhub.i.trombik.org:
     router:
       hosts:
-        client.i.trombik.org:
+        router.i.trombik.org:
     peer:
       hosts:
         peer.i.trombik.org:
