--- a/playbooks/default.yml
+++ b/playbooks/default.yml
@@ -21,4 +21,6 @@
     - role: trombik.netplan
       when: ansible_os_family == 'Debian'
     - role: trombik.ntopng
+    - role: trombik.argus
+    - role: trombik.argus_clients
   vars:
