--- a/playbooks/group_vars/dumbhub.yml
+++ b/playbooks/group_vars/dumbhub.yml
@@ -96,3 +96,33 @@ rastream_package: ""
 rastream_user: "{{ argus_user }}"
 rastream_group: "{{ argus_group }}"
 rastream_log_dir: "{{ argus_log_dir }}/rastream"
+
+# __________________________________________net-snmp
+os_net_snmp_extra_packages:
+  FreeBSD: []
+  OpenBSD: []
+  Debian:
+    - snmp
+    - snmp-mibs-downloader
+  RedHat:
+    - net-snmp-utils
+net_snmp_extra_packages: "{{ os_net_snmp_extra_packages[ansible_os_family] }}"
+os_net_snmp_flags:
+  FreeBSD: |
+    snmpd_flags="-a"
+    snmpd_conffile="{{ net_snmp_config_file }}"
+  OpenBSD: "-u _netsnmp -r -a"
+  Debian: |
+    SNMPDOPTS='-Lsd -Lf /dev/null -u Debian-snmp -g Debian-snmp -I -smux,mteTrigger,mteTriggerConf -p /run/snmpd.pid"
+    SNMPDRUN=yes
+  RedHat: |
+    OPTIONS="-LS0-6d"
+
+net_snmp_flags: "{{ os_net_snmp_flags[ansible_os_family] }}"
+net_snmp_config: |
+  syscontact root
+  syslocation "somewhere"
+  rocommunity public
+  agentAddress  udp:{{ project_ntopng_listen_address }}:161
+  mibs :
+net_snmp_snmptrapd_service_enable: no
