feature: import dumpcap
also:

* fix flags for snmpd

--- a/playbooks/default.yml
+++ b/playbooks/default.yml
@@ -25,4 +25,5 @@
     - role: trombik.argus_clients
     - role: trombik.rastream
     - role: trombik.net_snmp
+    - role: trombik.dumpcap
   vars:
