refactor: remove netplan_clean_config from virtualbox.yml

--- a/playbooks/group_vars/dumbhub.yml
+++ b/playbooks/group_vars/dumbhub.yml
@@ -200,3 +200,4 @@ redhat_repo:
 # use netplan on Linux platforms
 netplan_config: "{{ project_netplan_config }}"
 netplan_force_flush_handlers: yes
+netplan_clean_config: "{{ project_netplan_clean_config }}"
