--- a/playbooks/group_vars/all.yml
+++ b/playbooks/group_vars/all.yml
@@ -2,5 +2,6 @@
 sudo_sudoer: |
   root ALL=(ALL) ALL
   %wheel	ALL=(ALL) ALL
+  %admin	ALL=(ALL) ALL
   %sudo	ALL=(ALL:ALL) ALL
   #includedir {{ sudo_confd_dir }}
